@@ -273,17 +273,16 @@
 (defun debbugs-gnu-get-bugs ()
   "Retrieve bugs numbers from debbugs.gnu.org according search criteria."
   (let ((debbugs-port "gnu.org")
-	args ids)
-    (dolist (severity debbugs-gnu-current-severities (sort ids '<))
-      (if (string-equal severity "tagged")
-	  (setq ids (nconc ids (copy-sequence debbugs-gnu-local-tags)))
-	(dolist (package debbugs-gnu-current-packages)
-	  (setq args `(:archive ,debbugs-gnu-current-archive))
-	  (when (not (zerop (length severity)))
-	    (setq args (append args `(:severity ,severity))))
-	  (when (not (zerop (length package)))
-	    (setq args (append args `(:package ,package))))
-	  (setq ids (nconc ids (apply 'debbugs-get-bugs args))))))))
+	(args `(:archive ,debbugs-gnu-current-archive))
+	(ids (when (member "tagged" debbugs-gnu-current-severities)
+	       (copy-sequence debbugs-gnu-local-tags))))
+    (dolist (severity (delete "tagged" debbugs-gnu-current-severities))
+      (when (not (zerop (length severity)))
+	(setq args (append args `(:severity ,severity)))))
+    (dolist (package debbugs-gnu-current-packages)
+      (when (not (zerop (length package)))
+	(setq args (append args `(:package ,package)))))
+    (sort (nconc ids (apply 'debbugs-get-bugs args)) '<)))
 
 (defvar debbugs-gnu-current-widget nil)
 
